# tetrisCpp

./: Makefile  install_dependencies.sh  meson.build  tetris  tetris.cpp  tetris.sh
docker/: Dockerfile
src/: main.cpp  meson.build
src/deprecated/: main.cpp
src/game/: GameController.cpp  GameWindow.cpp
src/game/inc/: GameController.hpp  GameWindow.hpp
src/helpers/: Path.cpp
src/helpers/inc/: Path.hpp
src/tetrominos/: ITetromino.cpp
src/tetrominos/inc/: ITetromino.hpp  Point.hpp  ShapeI.hpp
